--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-appwrite": "^16.0.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.1",
     "ts-node-dev": "^2.0.0"
   }
 }
